--- a/index.html
+++ b/index.html
@@ -1,29 +1,41 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <title>AI Чат-бот</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AI CyberBot v2.0</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <div class="container">
-  <!-- Чат -->
-  <div class="chat">
-    <h2>🤖 AI Чат-бот</h2>
-    <div id="messages" class="messages"></div>
+    <div class="chat">
+        <header class="chat-header">
+            <div class="bot-avatar">🤖</div>
+            <div class="bot-status">
+                <h2>AI Чат-бот</h2>
+                <span class="online-tag">В сети</span>
+            </div>
+        </header>
 
-    <div class="input-box">
-      <input type="text" id="userInput" placeholder="Напиши сообщение...">
-      <button onclick="sendMessage()">Отправить</button>
+        <div id="messages" class="messages">
+            </div>
+
+        <div id="typing-box" class="typing-indicator" style="display: none;">
+            <span></span><span></span><span></span>
+        </div>
+
+        <div class="input-box">
+            <input type="text" id="userInput" placeholder="Напиши сообщение..." autocomplete="off">
+            <button id="sendBtn">Отправить</button>
+        </div>
     </div>
-  </div>
 
-  <!-- История поисков -->
-  <div class="history-container">
-    <h3>История запросов</h3>
-    <div id="history" class="history"></div>
-  </div>
+    <div class="history-container">
+        <h3>🕰 История запросов</h3>
+        <div id="history" class="history"></div>
+        <button onclick="clearFullHistory()" class="clear-all-btn">Очистить всё</button>
+    </div>
 </div>
 
 <script src="script.js"></script>
