Fix button ID for clear history functionality

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="history-container">
         <h3>🕰 История запросов</h3>
         <div id="history" class="history"></div>
-        <button onclick="clearFullHistory()" class="clear-all-btn">Очистить всё</button>
+<button id="clearBtn" class="clear-all-btn">Очистить всё</button>
     </div>
 </div>
 
