--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 <button id="clearBtn" class="clear-all-btn">Очистить всё</button>
     </div>
 </div>
-
+<script src="server.js"></script>
 <script src="script.js"></script>
 </body>
 </html>
+
